--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
 # menu
 menu:
   Home: .
-  Archives: archives  # 归档
   Categories: categories  # 分类
-  Tags: tags  # 标签
+  Archives: archives  # 归档
   Repository: repository  # github repositories
   Books: books  # 豆瓣书单
   Links: links  # 友链
-  About: about  # 关于
+  Resume: resume # 简历
+  # About: about  # 关于
 
 # Enable/Disable menu icons
 menu_icons:
   enable: true  # 是否启用导航菜单图标
   home: icon-home-fill
-  archives: icon-archives-fill
   categories: icon-folder
-  tags: icon-tags
+  archives: icon-archives-fill
   repository: icon-project
   books: icon-book-fill
   links: icon-friendship
-  about: icon-cup-fill
+  resume: icon-cup-fill
+  # about: icon-cup-fill
 
 # rss
 rss: /atom.xml
@@ -31,9 +31,9 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: Hexo # 页面title
+  title: Dark-Lab # 页面title
   favicon: /favicon.png
-  board: <p>欢迎交流与分享经验!</p> # 站点公告
+  board: <p>恭喜你发现了这个小站</p> # 站点公告
   copyright: false # 底部版权信息
 
 # config
@@ -87,7 +87,7 @@ donate:
     qrcode: images/donate/wechatpayimg.png
     title: 微信支付
   # 支付宝打赏
-  alipay: 
+  alipay:
     qrcode: images/donate/alipayimg.png 
     title: 支付宝
 
@@ -95,23 +95,23 @@ donate:
 # weibo,qq,qzone,wechat,tencent,douban,diandian,facebook,twitter,google,linkedin
 share:
   enable: true  # 是否启用分享
-  sites: weibo,qq,wechat,facebook,twitter  # PC端显示的分享图标
+  sites: weibo,qq,wechat  # PC端显示的分享图标
   mobile_sites: weibo,qq,qzone  # 移动端显示的分享图标
 
 # Github
 github: 
-  username: cofess  # github username
+  username: wanghaoxi3000  # github username
 
 # Comment
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
 comment:
-  type: valine  # 启用哪种评论系统
+  type: livere  # 启用哪种评论系统
   disqus:  # enter disqus shortname here
   youyan: 
-    uid: 1783844 # enter youyan uid 
-  livere:
     uid: # enter youyan uid 
+  livere:
+    uid: MTAyMC8zNDkxOS8xMTQ1Ng==
   gitment:
     githubID: 
     repo: 
@@ -141,7 +141,7 @@ comment:
   # https://api.douban.com/v2/movie/subject/:id 单个电影信息
   # https://api.douban.com/v2/movie/search?q={text} 电影搜索
 douban:
-  user: # 豆瓣用户名
+  user: darkreunion
   start: 0 # 从哪一条记录开始
   count: 100 # 获取豆瓣书单数据条数
   
@@ -156,73 +156,72 @@ pv:
         
 # wordcount
 postCount:
-  enable: false
+  enable: true
   wordcount: true  # 文章字数统计
   min2read: true  # 阅读时长预计 
 
 # Plugins
 plugins:
-  google_analytics: # enter the tracking ID for your Google Analytics
-  google_site_verification: # enter Google site verification code
-  baidu_analytics: # enter Baidu Analytics hash key
-  tencent_analytics: 
+  # google_analytics: # enter the tracking ID for your Google Analytics
+  # google_site_verification: # enter Google site verification code
+  baidu_analytics: 0f73d976ea657bf8613077af65e0b54a
+  # tencent_analytics: 
   
 # Miscellaneous
 twitter:
 google_plus:
 fb_admins:
 fb_app_id:  
-  
+
+# Coding page host
+coding:
+  show: true
+
 # profile
 profile:
   enabled: true # Whether to show profile bar
-  avatar: images/avatar.jpg
+  article_show: false  # Whether to show on the bottom of article 
+  avatar: images/avatar.png
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-  author: 昵称
-  author_title: Web Developer & Designer
-  author_description: 个人简介。
-  location: Shenzhen, China
-  follow: https://github.com/cofess
+  author:
+  author_title: 
+  author_description: 某中二的黑科技研究中心
+  location:
+  follow: https://github.com/wanghaoxi3000
   # Social Links
   social:
     links:
-      github: https://github.com/cofess
-      weibo: http://weibo.com/cofess
-      twitter: https://twitter.com/iwebued
+      github: https://github.com/wanghaoxi3000
+      weibo: https://weibo.com/u/1874996451
+      # twitter: /
       # facebook: /
       # dribbble: /
-      behance: https://www.behance.net/cofess
+      # behance: /
       rss: atom.xml
     link_tooltip: true # enable the social link tooltip, options: true, false
-  # My Skills 
-  skills:
-    Git: ★★★☆☆
-    Gulp: ★★★☆☆
-    Javascript: ★★★☆☆
-    HTML+CSS: ★★★☆☆
-    Bootstrap: ★★★☆☆
-    ThinkPHP: ★★★☆☆
-    平面设计: ★★★☆☆
-  # My Personal Links
-  links:
-    Github: https://github.com/cofess
-    Blog: http://blog.cofess.com
-    微博: http://weibo.com/cofess
-    花瓣: http://huaban.com/cofess
-    Behance: https://www.behance.net/cofess
-  # My Personal Labels
-  labels:
-    - 前端
-    - 前端开发
-    - 前端重构
-    - Web前端
-    - 网页重构
-  # My Personal Works
-  works:
-    name:
-      link: http://www.example.com
-      date: 2016
-  # My Personal Projects
-  projects:
-    cofess/gulp-startpro: https://github.com/cofess/gulp-startpro
-    cofess/hexo-theme-pure: https://github.com/cofess/hexo-theme-pure
+
+# resume
+resume:
+  email: wanghaoxi3000@163.com
+  education: 
+    school-1:
+      name: 四川理工学院 | 本科
+      profession: 电子信息工程
+    school-2:
+      name: 电子科技大学 | 第二学位
+      profession: 计算机技术及应用
+  proficiency: PYTHON, GO, JAVASCRIPT, LINUX C, LINUX SHELL
+  direction: Python 后端开发, Go 后端开发, 基于 Vue 的前端开发
+  project:
+    linuxc:
+      title: Linux C 开发
+      time: 2014.9 - 2017.6
+      decription: 使用 C 语言编写基于 Linux 的机顶盒的软件系统，针对各地的不同需求对机顶盒的界面、广告系统、CA、EPG等功能进行定制化开发。参与华为 OceanStor 9000 海量存储系统底层的 Linux C 后台开发，及其相关功能的单元测试代码编写工作。
+    django:
+      title: 人脸监控平台后端
+      time: 2017.8 - 至今
+      decription: 使用 Django 框架，配合 Django rest framework、 Channels 等主要模块，独立开发基于人脸识别的安防监控后台。采用了 PostgreSQL 数据库，Redis 缓存，Python-rq 消息队列， WebSocket 信息推送等架构技术，实现人脸检索、监控报警、设备状态监控、分区域推送等安防平台必备的功能。
+    vue:
+      title: 安防监控平台前端
+      time: 2017.11 - 2018.6
+      decription: 使用 Vue.js 框架，配合 Element UI 前端组件，开发了一套安防平台的前端管理系统。应用了 vuex、axios、echarts 等 Vue 主要技术栈，具备多级权限路由，图表显示各系统状态、动态响应等功能。实现通过简洁友善的操作界面对安防平台系统进行监控和管理。
