去除右侧 tag 栏仅保留 tagcloud, 添加百度自动推送脚本

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,6 @@ sidebar: right
 widgets:
   - board  
   - category
-  - tag
   - tagcloud
   - archive
   - recent_posts
@@ -174,6 +173,7 @@ plugins:
   google_site_verification: g1JnNWv6WMjhUYDMz-jUeVtjUYrMTkraj95u8z5USrg
   baidu_site_verification: MeyBQbsO2V
   baidu_analytics: 2aa84eb5eced551a567f24c1717e00b4
+  baidu_autopush: true
   # tencent_analytics: 
   
 # Miscellaneous
