--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,12 @@ site:
     url: ../images/logo.png
   # title:  # 页面title
   favicon: /favicon.png
-  board: <p>恭喜你发现了这个小站</p> # 站点公告
+  # 站点公告
+  board: |
+    <p>恭喜你发现了这个小站</p>
+    <p style="margin-top:15px;">
+      资料库：<strong><a href="https://www.yuque.com/haoxi-7jldh/backend-knowledge/">后端知识库</a></strong>
+    </p>
   copyright: true # 底部版权信息
 
 # config
